--- a/index.html
+++ b/index.html
@@ -81,15 +81,15 @@
                     LCD admiral</span
                   >
                 </div>
-                <div class="block-mini-subtitle mini-2">
+                <div class="block-mini-subtitle">
                   <h3>apartment area:</h3>
                   <span>81 m2</span>
                 </div>
-                <div class="block-mini-subtitle mini-3">
+                <div class="block-mini-subtitle">
                   <h3>Repair time:</h3>
                   <span>3.5 months</span>
                 </div>
-                <div class="block-mini-subtitle mini-4">
+                <div class="block-mini-subtitle">
                   <h3>Repair Cost:</h3>
                   <span>Upon request</span>
                 </div>
