--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@ wildest fantasies</h3>
           </ul>
         </nav>
         <span class="phone">+7 (928) 768-32-39</span>
-        <button type="button" class="button-footer">Request a call</button>
+        <button type="button" class="button-footer">Request a call</button><span></span>
        </div>
       </main>
     </footer>
